[package]
name = "native-regex-tester"
version = "0.1.4"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
native-regex-lib = { path = "E:\\Software Projects\\IntelliJ\\native-regex-lib"}
# native-regex-lib = { git = "https://github.com/ray33ee/native-regex-lib", branch="main" }

[dependencies]
native-regex-lib = { path = "E:\\Software Projects\\IntelliJ\\native-regex-lib" }
# native-regex-lib = { git = "https://github.com/ray33ee/native-regex-lib", branch="main" }
regex = "1.4.5"

